tests/paczka1/fuzzy1/12913592.err
Error in line 2: vcoPKQQk A642 29,6
Error in line 13: tcF7RjwW A642 50,9
Error in line 10: vcoPKQQk S208 47,1
Error in line 17: vcoPKQQk S451 6,0
Error in line 21: tcF7RjwW A642 32,0
Error in line 9: EyTZaW9 S208 82,1
Error in line 20: S451 A642 100,0
Error in line 36: tcF7RjwW A642 43,8
